Bug 128630 - FILESAVE: PDF: arrows become narrower after exporting
Summary: FILESAVE: PDF: arrows become narrower after exporting
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.4.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2019-11-06 12:49 UTC by Xisco Faulí
Modified: 2019-11-13 09:57 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
comparison (219.19 KB, image/png)
2019-11-06 12:49 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2019-11-06 12:49:47 UTC
Created attachment 155577 [details]
comparison

Steps to reproduce:
1. Open attachment 79699 [details] from bug 64908
2. Save to PDF
3. Open the new created PDF file

-> Top left, top right, bottom left and bottom right arrows become narrower. See comparison image

Reproduced in

Version: 6.4.0.0.alpha1+
Build ID: ee909ca2c02f949605f68720c3f1eef658502749
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2019-11-06 12:50:45 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=68549e00d5e23aa22bc974a8151d93cd948444b3

author	Miklos Vajna <vmiklos@collabora.com>	2019-10-10 19:03:53 +0200
committer	Miklos Vajna <vmiklos@collabora.com>	2019-10-10 20:24:26 +0200
commit 68549e00d5e23aa22bc974a8151d93cd948444b3 (patch)
tree 62ea4e15d0f5da26d2d46c4603403fcbf74f0237
parent 7d9932ade30464abf297f2e3c3690cca68d6bf71 (diff)
vcl, BitmapEx transformed draw: special-case simple rotations

Bisected with: bibisect-linux64-6.4

Adding Cc: to Miklos Vajna
Comment 2 Commit Notification 2019-11-12 07:48:14 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c465d920f4fe15c6e614beffb80b53d24a3dc5c7

tdf#128630 vcl PDF export: fix aspect ratio when scaling rotated image

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Xisco Faulí 2019-11-13 09:57:47 UTC
Verified in

Version: 6.4.0.0.alpha1+
Build ID: 26b7ff2b6cc4def8ff7b02e223961534ba88e654
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Miklos, thanks for fixing this issue!